JumpScript/tests/baselines/reference/parserSkippedTokens4.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens4.jump(1,1): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens4.jump (1 errors) ====
    \  /regexp/;
    
!!! error TS1127: Invalid character.